--- a/src/components/MoviesList/MoviesList.module.css
+++ b/src/components/MoviesList/MoviesList.module.css
@@ -1,5 +1,10 @@
 .wrapper {
     display: flex;
+    flex-direction: column;
+}
+
+.wrapperList {
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 30px 60px;
