--- a/src/components/GenresSelect/GenresSelect.module.css
+++ b/src/components/GenresSelect/GenresSelect.module.css
@@ -1,13 +1,12 @@
-.searchInput {
-    width: 500px;
+.input {
+    width: 200px;
     font-size: 17px;
     padding: 5px 10px;
-    flex-grow: 10;
     border-radius: 10px;
     border: 1px solid grey;
 }
 
-.searchInput:active {
+.input:active {
     border: 1px solid black;
     border-radius: 10px;
 }
