--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,8 +16,9 @@
 }
 
 .white {
-    background-color: #7f8ace;
+    background-color: #8b96d5;
 }
 .dark {
-    background-color: #061240;
+    background-color: #050521;
+    color: #81c1f3;
 }
