--- a/src/components/SearchPanel/DropDown/DropDown.module.css
+++ b/src/components/SearchPanel/DropDown/DropDown.module.css
@@ -14,3 +14,12 @@
     text-align: center;
     margin: 10px;
 }
+
+
+.white {
+    background-color: #ccced7;
+}
+.dark {
+    background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.3);
+}
