--- a/src/components/SearchPanel/DropDownItem/DropDownItem.module.css
+++ b/src/components/SearchPanel/DropDownItem/DropDownItem.module.css
@@ -14,3 +14,13 @@
     text-decoration: none;
     color: black;
 }
+
+.dark {
+    color: #81c1f3;
+}
+.dark:hover {
+    background-color: rgba(71, 71, 71, 0.4);
+    border: 1px solid #474747;
+    cursor: pointer;
+    border-radius: 10px;
+}
