--- a/src/components/SearchPanel/SearchPanel.module.css
+++ b/src/components/SearchPanel/SearchPanel.module.css
@@ -11,3 +11,11 @@
     border: 1px solid black;
     border-radius: 10px;
 }
+
+.white {
+    background-color: #ccced7;
+}
+.dark {
+    background-color: #373752;
+    color: #81c1f3;
+}
