--- a/src/components/MovieInfo/MovieInfo.module.css
+++ b/src/components/MovieInfo/MovieInfo.module.css
@@ -7,7 +7,6 @@
 }
 
 
-
 .wrapperVote {
     display: flex;
     justify-content: center;
@@ -19,7 +18,6 @@
     font-size: 25px;
     width: 100px;
     height: 100px;
-    border: 3px solid #393939;
     border-radius: 100%;
 }
 .voteTitle {
@@ -30,6 +28,13 @@
     margin: -8px 0;
 }
 
+.white {
+    border: 3px solid #393939;
+}
+.dark {
+    border: 3px solid #ffffff;
+    background-color: rgba(0, 0, 0, 0.8);
+}
 
 
 .wrapperInfo {
