--- a/src/components/GenresSelect/GenresSelect.module.css
+++ b/src/components/GenresSelect/GenresSelect.module.css
@@ -2,6 +2,7 @@
     width: 180px;
     font-size: 17px;
     padding: 5px 10px;
+    flex-grow: 10;
     border-radius: 10px;
     border: 1px solid grey;
 }
