--- a/src/components/Hide/Hide.module.css
+++ b/src/components/Hide/Hide.module.css
@@ -1,28 +1,42 @@
 .wrapper {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: rgba(229, 15, 15, 0.3);
     z-index: 5;
-    backdrop-filter: blur(2px);
+    background-color: rgba(229, 15, 15, 0.3);
+    backdrop-filter: blur(10px);
 }
-.blur {
-    /*filter: blur(4px);*/
-}
+
 .first {
-   min-height: 200px;
-    min-width:  600px;
-
-    background: rgba(0,0,0,0.3);
-    /*display: block;*/
-    /*position: absolute;*/
+    box-sizing: border-box;
+    min-height: 200px;
+    min-width: 600px;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.6);
+    padding: 30px 50px;
 }
 
-.second li{
-    height: 0px;
-    width: 0px;
-    z-index: -1;
+.btnWrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.close {
+    margin-top: 15px;
+    padding: 7px 15px;
+    border-radius: 8px;
+}
+
+.close:hover {
+    cursor: pointer;
+    background-color: #cecece;
+}
+
+.close:active {
+    cursor: pointer;
+    background-color: #a8a7a7;
 }
