--- a/src/components/MoviesList/MoviesList.module.css
+++ b/src/components/MoviesList/MoviesList.module.css
@@ -6,7 +6,7 @@
 .wrapperList {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 30px 60px;
     column-gap: 20px;
     row-gap: 20px;
