--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -1,7 +1,7 @@
 .wrapper {
-    width: 210px;
+    width: 350px;
     min-height: 260px;
-    font-size: 13px;
+    font-size: 14px;
     text-decoration: none;
     color: black;
 }
@@ -14,6 +14,14 @@
 .wrapper:active {
     background: rgba(108, 108, 108, 0.4);
     border-radius: 10px;
+}
+
+.info {
+    padding: 10px;
+}
+
+.info > h3 {
+    font-size: 20px;
 }
 
 .dark {
