add logic to test page

--- a/src/components/Test/Questions/Questions.module.css
+++ b/src/components/Test/Questions/Questions.module.css
@@ -1,6 +1,27 @@
 .wrapper {
     margin: auto;
-    width: 800px;
-    background-color: #fff;
+    width: 1100px;
     min-height: 100vh;
+    padding: 50px 100px;
+    border-left: 1px black solid;
+    border-right: 1px black solid;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+}
+.wrapper > h1 {
+    text-align: center;
+}
+.linkToGitHub {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 25px;
+    margin-top: 40px;
+}
+
+
+.green {
+    background-color: rgb(228, 252, 228);
+}
+.red {
+    background-color: #fcd1d1;
 }
