--- a/src/components/Test/Timer/Timer.module.css
+++ b/src/components/Test/Timer/Timer.module.css
@@ -4,8 +4,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
-    height: 200px;
-    font-size: 30px;
-    background-color: #d99393;
+    width: 380px;
+    height: 140px;
+    font-size: 60px;
+    font-weight: bold;
+    border-bottom-left-radius: 110px;
+    border-bottom-right-radius: 110px;
+    border-bottom: 1px black solid;
+    border-left: 1px black solid;
+    border-right: 1px black solid;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+    cursor: default;
+}
+/*.wrapper {*/
+/*    cursor: default;*/
+/*}*/
+
+.green {
+    background-color: rgba(136, 229, 133, 0.6);
+}
+.red {
+
+    background-color: rgba(219, 131, 131, 0.6);
 }
