--- a/src/components/CV/ContactCV/ContactCV.module.css
+++ b/src/components/CV/ContactCV/ContactCV.module.css
@@ -1,7 +1,7 @@
+.wrapperBlock {
+    margin-bottom: 20px;
+}
+
 .wrapper {
-    /*display: flex;*/
-    /*column-gap: 60px;*/
-    /*width: 100%;*/
-    /*padding: 60px;*/
-    /*margin: auto;*/
+    padding: 10px;
 }
