--- a/src/components/CV/BodyCV/BodyCV.module.css
+++ b/src/components/CV/BodyCV/BodyCV.module.css
@@ -8,8 +8,8 @@
 
 .column {
     width: 460px;
-    height: 300px;
-    background-color: #aa7373;
+
+    /*background-color: #aa7373;*/
 }
 
 /*.img {*/
