add EDUCATION block / fix languages

--- a/src/containers/CV/CV.module.css
+++ b/src/containers/CV/CV.module.css
@@ -6,8 +6,7 @@
 .cv_wrapper {
     margin: auto;
     width: 1000px;
-    /*min-height: 100vh;*/
-    /*padding: 50px 100px;*/
+    min-height: 100vh;
     background-color: #fff;
     border-left: 1px black solid;
     border-right: 1px black solid;
