--- a/src/components/Test/Preview/Preview.module.css
+++ b/src/components/Test/Preview/Preview.module.css
@@ -2,7 +2,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 200px;
-    margin: auto;
-    width: 400px;
+    align-items: center;
+    width: 100%;
+    min-height: 100vh;
+}
+
+.block {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 450px;
+    padding: 50px 0;
+}
+
+.block > h1 {
+    margin-bottom: 30px;
 }
