--- a/src/components/Movie/Footer/Footer.module.css
+++ b/src/components/Movie/Footer/Footer.module.css
@@ -1,6 +1,9 @@
 .footer {
     width: 100%;
     height: 10vh;
+    display: flex;
+    justify-content: center;
+    font-size: 35px;
 }
 
 .white {
